feat: added boilerplate sections

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,8 +1,8 @@
 <header class="top-nav">
 	<div class="title">Esbuild Analyzer</div>
 	<div class="nav-tabs">
-		<button class="active">Project Splitting Overview</button>
-		<button>Lazy Import Analyzer</button>
-		<button>Statistics</button>
+		<button class="active" data-section="splitting-section">Project Splitting Overview</button>
+		<button data-section="importing-section">Lazy Import Analyzer</button>
+		<button data-section="statistics-section">Statistics</button>
 	</div>
 </header>
