--- a/src/components/importingSection.html
+++ b/src/components/importingSection.html
@@ -1,4 +1,4 @@
 <section class="importing-section" hidden>
-	<h1>Importing Anaylsis Overview</h1>
+	<h1>Lazy Import Analyzer</h1>
 	<!-- Main content will go here -->
 </section>
