--- a/src/components/splittingSection.html
+++ b/src/components/splittingSection.html
@@ -1,4 +1,6 @@
 <section class="splitting-section">
 	<h1>Project Splitting Overview</h1>
-	<!-- Main content will go here -->
+	<div id="chunks-container" class="chunks-grid">
+		<!-- Chunks will be dynamically inserted here -->
+	</div>
 </section>
