--- a/src/components/lovable.css
+++ b/src/components/lovable.css
@@ -231,6 +231,22 @@ body {
 	margin-bottom: 1rem;
 }
 
+.charts-title {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 0.25rem;
+	& > h3 {
+		margin-bottom: 0;
+	}
+}
+
+#pie-dropdown {
+	color: var(--text-primary);
+	background-color: transparent;
+	padding: 0.25rem;
+	border: none;
+}
+
 /* Buttons */
 .button-group {
 	display: flex;
