--- a/src/components/analysis.html
+++ b/src/components/analysis.html
@@ -18,7 +18,7 @@
 						<path d="M8 17v-3" />
 					</svg>
 				</div>
-				<h1>Bundle Analyzer</h1>
+				<h1>Esbuild Analyzer</h1>
 			</div>
 
 			<div class="nav-links">
@@ -127,7 +127,7 @@
 					<div class="legend-dot lazy"></div>
 					<span>Lazy Imports</span>
 				</div>
-				<div class="legend-hint">Drag nodes • Scroll to zoom • Hover for details</div>
+				<div class="legend-hint">Drag nodes • Scroll to zoom</div>
 			</div>
 		</div>
 
