--- a/src/components/analysis.html
+++ b/src/components/analysis.html
@@ -120,6 +120,10 @@
 		<div class="card legend-card">
 			<div class="legend">
 				<div class="legend-item">
+					<div class="legend-dot entry"></div>
+					<span>Entry Points</span>
+				</div>
+				<div class="legend-item">
 					<div class="legend-dot eager"></div>
 					<span>Eager Imports</span>
 				</div>
