--- a/src/components/analysis.html
+++ b/src/components/analysis.html
@@ -135,6 +135,11 @@
 			</div>
 		</div>
 
+		<details class="card node-list-card" id="node-list-details">
+			<summary>List of enabled nodes</summary>
+			<div class="node-list-grid" id="node-list-grid"></div>
+		</details>
+
 		<div class="card graph-card">
 			<svg id="graph-svg"></svg>
 		</div>
